--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,13 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome to CS371" />
+            android:text="Happy Birthday!"
+            android:textColor="#FFA500"
+            android:textSize="40dp"
+
+            />
+
+
     </LinearLayout>
 
     <LinearLayout
